# storyteller

./: package.json  tsconfig.json
.gitlab/: changelog_config.yml
.gitlab/ci/: bump-versions.yml  publish-packages.yml
.yarn/versions/: 728b8cb2.yml  e6cca1cf.yml
align/: package.json
align/src/align/: align.ts  getSentenceRanges.ts  parse.ts  textFragments.ts
align/src/align/__snapshots__/: align - should align Peter and Wendy [id-fragment].snapshot  align - should align Peter and Wendy [text-fragment].snapshot  align - should align Peter and Wendy.snapshot
align/src/align/__tests__/: align.test.ts  textFragments.test.ts
align/src/cli/: bin.ts
align/src/markup/: markup.ts  serializeDom.ts  transform.ts
align/src/markup/__snapshots__/: markupChapter - can tag words.snapshot  (+1 more)
align/src/transcribe/: parse.ts  transcribe.ts
epub/: README.md  index.ts
ghost-story/: package.json
ghost-story/src/: constants.ts  index.ts
ghost-story/src/api/: Recognition.ts
ghost-story/src/audio/: AudioConverter.ts  AudioFormat.ts
ghost-story/src/cli/: bin.ts  config.ts  install.ts  whisper-server.ts
ghost-story/src/recognition/: WhisperCppSTT.ts
ghost-story/test/: spaceless-scripts.test.ts
mobile/: package.json
okmain/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
okmain/.cargo/: config.toml
okmain/__test__/: index.test.ts  index.test.ts.snapshot
okmain/src/: lib.rs
web/: components.json  package.json
web/messages/: en.json  nl.json
web/src/auth/: auth.ts
web/src/database/: settings.ts  settingsTypes.ts
(+29 files in other folders)
